# fast-api-ory-gateway

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  test_main.http
keys/: fast-api.jwks.json
oryd/: access-rules.yml  oathkeeper.yml
